<resources>
    <string name="app_name">Pangucheria La 120</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Logueate</string>
    <string name="action_sign_in_short">Logueate</string>
    <string name="welcome">Bienvenido !</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">"La contraseña debe tener > 5 caracteres. "</string>
    <string name="login_failed">Logueo Fallido</string>
    <string name="prompt_telephone">Telefono</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_Address">Direccion</string>
    <string name="register">¡¡¡Registrate ahora!!!</string>
    <string name="action_register">Registrarse</string>
    <string name="invalid_name">Nombre no valido</string>
    <string name="invalid_lastName">Apellido no valido</string>
    <string name="invalid_address">Direccion no valida</string>
    <string name="invalid_phone">Telefono no valido</string>
    <string name="menu">Menu</string>
    <string name="cart">Carrito</string>
    <string name="category">Categoria</string>
    <string name="home">Home</string>
    <string name="search_hint">Que vamos a comer hoy</string>
    <string name="cheese_burger_example">Hamburguesa con Queso</string>
    <string name="no_items">No Hay Items Disponibles</string>
    <string name="delivery_pay">Pago a domicilio</string>
    <string name="card_pay">Pago con Tarjeta</string>
    <string name="currency">S/. </string>
    <string name="items">Items</string>
    <string name="categories">Categorias</string>
    <string name="promos">Promociones</string>
    <string name="users">Usuarios</string>

    <string-array name="boolean_array">
        <item>Verdadero</item>
        <item>Falso</item>
    </string-array>
</resources>